mime-actions: make unhandled type dialogs modal

The unhandled type message dialog and application chooser dialog for
files of unhandled type are not modal, thus allowing the user to
inadvertently spawn multiple dialogs.

This commit fixes that by making the dialogs modal.

https://bugzilla.gnome.org/show_bug.cgi?id=627259